# Game-Room

./: MiniArcade_PROJECT_COMPLETE.txt  README.md
MiniArcade/: .gitignore  00_LISEZ_MOI_EN_PREMIER.txt  CMakeLists.txt  DELIVERY_NOTES.md  INSTALL.txt  LICENSE  PROJECT_INFO.txt  QUICK_START.md  README.md  SUMMARY.txt  build.bat  build.sh
MiniArcade/src/: Game.hpp  Menu.cpp  Menu.hpp  PongGame.cpp  PongGame.hpp  ReflexGame.cpp  ReflexGame.hpp  SnakeGame.cpp  SnakeGame.hpp  main.cpp
MiniArcade/src/utils/: ResourceManager.cpp  ResourceManager.hpp  ScoreManager.cpp  ScoreManager.hpp
mini-arcade-web/: .gitignore  INSTALL.md  README.md  index.html  package.json  server.js  style.css
mini-arcade-web/js/: AirHockeyGame.js  BreakoutGame.js  ClickRush.js  Connect4Game.js  FlappyGame.js  HangmanGame.js  PongGame.js  RacingGame.js  ReflexGame.js  SnakeGame.js  SoccerGame.js  SpaceInvadersGame.js  TankBattleGame.js  TetrisGame.js  TicTacToeGame.js  TronGame.js  main.js  socket-client.js  utils.js
